# Alchemist

./: .gitignore  Build.bat  BuildWeb.bat  CMakeLists.txt  README.md  VSGen.bat  Webserver.bat  _BuildIntl.bat  _BuildWebIntl.bat  _VSGenIntl.bat  hanoi.erl
Resources/: Node.pdn
Source/CPP/: 2DPositioning.h  Alchemist.cpp  Alchemist.h  CompilationProblem.h  DrawShapes.cpp  DrawShapes.h  Libs.h  Serialiser.h  Variables.cpp  Variables.h
Source/CPP/Module/: Function.cpp  Function.h  Module.cpp  Module.h
Source/CPP/Nodes/: Nodes.cpp  Nodes.h
Source/CPP/Nodes/Basic/: Node_Arithmetic.cpp  Node_Arithmetic.h  Node_Operator.cpp  Node_Operator.h
Source/CPP/Nodes/Special/: Node_Root.cpp  Node_Root.h  Node_Term.cpp  Node_Term.h  Node_UserDefined.cpp  Node_UserDefined.h  Node_Variable.cpp  Node_Variable.h
Source/CPP/Resources/: Resource_Font.cpp  Resource_Font.h  Resource_Image.cpp  Resource_Image.h  Resources.cpp  Resources.h
Source/HTML/: Shell.html
